NATTQA-ENV/force-app/main/default/objects/NATT_Backlog_Item__c/NATT_Backlog_Item__c.object-meta.xml
<CustomObject>
    <label>Backlog Item</label>
    <nameField>
        <label>Backlog Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Backlog Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>