NATTQA-ENV/force-app/main/default/objects/NATT_Backlog_Item__c/fields/NATT_Account__c.field-meta.xml
<CustomField>
    <fullName>NATT_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Backlog Items</relationshipLabel>
    <relationshipName>Backlog_Items</relationshipName>
    <type>Lookup</type>
</CustomField>