NATTQA-ENV/force-app/main/default/objects/NATT_Backlog_Item__c/fields/NATT_Backlog_Group__c.field-meta.xml
<CustomField>
    <fullName>NATT_Backlog_Group__c</fullName>
    <formula>IF(NOT(ISBLANK(NATT_Account__r.NATT_Backlog_Group__c)),NATT_Account__r.NATT_Backlog_Group__c, &apos;No Group&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Backlog Group</label>
    <type>Text</type>
</CustomField>