NATTQA-ENV/force-app/main/default/objects/NATT_Backlog_Item__c/fields/NATT_Bill_To_Address__c.field-meta.xml
<CustomField>
    <fullName>NATT_Bill_To_Address__c</fullName>
    <label>Bill To Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>