NATTQA-ENV/force-app/main/default/objects/NATT_Backlog_Item__c/fields/NATT_Bill_To_Name__c.field-meta.xml
<CustomField>
    <fullName>NATT_Bill_To_Name__c</fullName>
    <label>Bill To Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>