NATTQA-ENV/force-app/main/default/objects/NATT_Backlog_Item__c/fields/NATT_BklgQty__c.field-meta.xml
<CustomField>
    <fullName>NATT_BklgQty__c</fullName>
    <label>BklgQty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>