NATTQA-ENV/force-app/main/default/objects/NATT_Backlog_Item__c/fields/NATT_Customer_PO__c.field-meta.xml
<CustomField>
    <fullName>NATT_Customer_PO__c</fullName>
    <label>Customer P.O.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>