NATTQA-ENV/force-app/main/default/objects/NATT_Backlog_Item__c/fields/NATT_End_User__c.field-meta.xml
<CustomField>
    <fullName>NATT_End_User__c</fullName>
    <label>End User</label>
    <length>80</length>
    <type>Text</type>
</CustomField>