NATTQA-ENV/force-app/main/default/objects/NATT_Backlog_Item__c/fields/NATT_Freight_Code__c.field-meta.xml
<CustomField>
    <fullName>NATT_Freight_Code__c</fullName>
    <label>Freight Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PPA</fullName>
            </value>
            <value>
                <fullName>COL</fullName>
            </value>
            <value>
                <fullName>PPB</fullName>
            </value>
            <value>
                <fullName>EXW</fullName>
            </value>
            <value>
                <fullName>PP</fullName>
            </value>
            <value>
                <fullName>CPU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>