NATTQA-ENV/force-app/main/default/objects/NATT_Backlog_Item__c/fields/NATT_JDE_AR_Code__c.field-meta.xml
<CustomField>
    <fullName>NATT_JDE_AR_Code__c</fullName>
    <label>JDE AR Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>