NATTQA-ENV/force-app/main/default/objects/NATT_Backlog_Item__c/fields/NATT_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>NATT_Order_Type__c</fullName>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CB</fullName>
            </value>
            <value>
                <fullName>S1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>