NATTQA-ENV/force-app/main/default/objects/NATT_Backlog_Item__c/fields/NATT_Prod_Description__c.field-meta.xml
<CustomField>
    <fullName>NATT_Prod_Description__c</fullName>
    <label>Prod Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>