NATTQA-ENV/force-app/main/default/objects/NATT_Backlog_Item__c/fields/NATT_Prod_Family__c.field-meta.xml
<CustomField>
    <fullName>NATT_Prod_Family__c</fullName>
    <label>Prod Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NATT_Product_Family</valueSetName>
    </valueSet>
</CustomField>