NATTQA-ENV/force-app/main/default/objects/NATT_Backlog_Item__c/fields/NATT_Prod_Line__c.field-meta.xml
<CustomField>
    <fullName>NATT_Prod_Line__c</fullName>
    <label>Prod Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NATT_Product_Line</valueSetName>
    </valueSet>
</CustomField>