NATTQA-ENV/force-app/main/default/objects/NATT_Backlog_Item__c/fields/NATT_Prod_No__c.field-meta.xml
<CustomField>
    <fullName>NATT_Prod_No__c</fullName>
    <label>Prod No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>