NATTQA-ENV/force-app/main/default/objects/NATT_Backlog_Item__c/fields/NATT_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>NATT_Product_Family__c</fullName>
    <label>Prod Family</label>
    <length>30</length>
    <type>Text</type>
</CustomField>