NATTQA-ENV/force-app/main/default/objects/NATT_Backlog_Item__c/fields/NATT_Req_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>NATT_Req_Ship_Date__c</fullName>
    <label>Req Ship Date</label>
    <type>Date</type>
</CustomField>