NATTQA-ENV/force-app/main/default/objects/NATT_Backlog_Item__c/fields/NATT_Sch_Pick_Date__c.field-meta.xml
<CustomField>
    <fullName>NATT_Sch_Pick_Date__c</fullName>
    <label>Sch Pick Date</label>
    <type>Date</type>
</CustomField>