NATTQA-ENV/force-app/main/default/objects/NATT_Backlog_Item__c/fields/NATT_SFDC_Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>NATT_SFDC_Quote_ID__c</fullName>
    <label>SFDC Quote ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>