NATTQA-ENV/force-app/main/default/objects/NATT_Backlog_Item__c/fields/NATT_Ship_To_City__c.field-meta.xml
<CustomField>
    <fullName>NATT_Ship_To_City__c</fullName>
    <label>Ship To City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>