NATTQA-ENV/force-app/main/default/objects/NATT_Backlog_Item__c/fields/NATT_Ship_To_State__c.field-meta.xml
<CustomField>
    <fullName>NATT_Ship_To_State__c</fullName>
    <label>Ship To State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NATT_State_Picklist</valueSetName>
    </valueSet>
</CustomField>