NATTQA-ENV/force-app/main/default/objects/NATT_Backlog_Item__c/fields/NATT_SO__c.field-meta.xml
<CustomField>
    <fullName>NATT_SO__c</fullName>
    <formula>LEFT(NATT_SOLine__c, 8)</formula>
    <label>SO</label>
    <type>Text</type>
</CustomField>