NATTQA-ENV/force-app/main/default/objects/NATT_Backlog_Item__c/fields/NATT_SO_Cat__c.field-meta.xml
<CustomField>
    <fullName>NATT_SO_Cat__c</fullName>
    <label>SO Cat.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DDO</fullName>
            </value>
            <value>
                <fullName>DFO</fullName>
            </value>
            <value>
                <fullName>DGO</fullName>
            </value>
            <value>
                <fullName>DLO</fullName>
            </value>
            <value>
                <fullName>DSO</fullName>
            </value>
            <value>
                <fullName>HDO</fullName>
            </value>
            <value>
                <fullName>HFO</fullName>
            </value>
            <value>
                <fullName>HGO</fullName>
            </value>
            <value>
                <fullName>HIO</fullName>
            </value>
            <value>
                <fullName>HLO</fullName>
            </value>
            <value>
                <fullName>HSO</fullName>
            </value>
            <value>
                <fullName>INT</fullName>
            </value>
            <value>
                <fullName>TBO</fullName>
            </value>
            <value>
                <fullName>TDO</fullName>
            </value>
            <value>
                <fullName>TFO</fullName>
            </value>
            <value>
                <fullName>TGO</fullName>
            </value>
            <value>
                <fullName>TIO</fullName>
            </value>
            <value>
                <fullName>TLO</fullName>
            </value>
            <value>
                <fullName>TSO</fullName>
            </value>
            <value>
                <fullName>AFO</fullName>
            </value>
            <value>
                <fullName>ALO</fullName>
            </value>
            <value>
                <fullName>ADO</fullName>
            </value>
            <value>
                <fullName>ASO</fullName>
            </value>
            <value>
                <fullName>ADY</fullName>
            </value>
            <value>
                <fullName>VLO</fullName>
            </value>
            <value>
                <fullName>VSO</fullName>
            </value>
            <value>
                <fullName>VDO</fullName>
            </value>
            <value>
                <fullName>VGO</fullName>
            </value>
            <value>
                <fullName>VFO</fullName>
            </value>
            <value>
                <fullName>HBO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>