NATTQA-ENV/force-app/main/default/objects/NATT_Backlog_Item__c/fields/NATT_SOLine__c.field-meta.xml
<CustomField>
    <fullName>NATT_SOLine__c</fullName>
    <label>SOLine</label>
    <length>50</length>
    <type>Text</type>
</CustomField>